--- a/RawConverter/MainWindow.xaml
+++ b/RawConverter/MainWindow.xaml
@@ -40,7 +40,7 @@
             </Button.Background>
         </Button>
         
-        <!-- Settings widgets-->
+        <!-- Settings controls -->
         <StackPanel Grid.Row="1" Margin="10">
 
             <!-- Expander for input file type -->
@@ -66,16 +66,15 @@
             </Expander>
 
         </StackPanel>
-        
-      
+
+        <!-- Info controls -->
         <StackPanel Grid.Row="2" Margin="10" Orientation="Horizontal">
             <Button x:Name="ButtonMoreInfo" Height="75" Width="75" Margin="0,0,10,0">
                 <Button.Background>
                     <ImageBrush ImageSource="pack://siteoforigin:,,,/Resources/info.png"/>
                 </Button.Background>
             </Button>
-            <Label x:Name="LabelInfo" Content="Info text" FontSize="14"/>
-
+            <TextBlock x:Name="TextBlockInfo" Text="Info text" FontSize="14"/>
         </StackPanel>
         
         
