--- a/RawConverter/MainWindow.xaml
+++ b/RawConverter/MainWindow.xaml
@@ -98,7 +98,7 @@
 
         <StackPanel Margin="10" Grid.Column="2" Grid.Row="2" Orientation="Horizontal">
             <!-- Button for adding pictures -->
-            <Button x:Name="ButtonAddPictures" Height="75" Width="75" Margin="0,0,10,0">
+            <Button x:Name="ButtonAddPictures" Height="75" Width="75" Margin="0,0,10,0" Click="ButtonAddPictures_Click">
                 <Button.Background>
                     <ImageBrush ImageSource="pack://siteoforigin:,,,/Resources/AddPictures.png"/>
                 </Button.Background>
