--- a/RawConverter/MainWindow.xaml
+++ b/RawConverter/MainWindow.xaml
@@ -26,8 +26,8 @@
 
         <Border Grid.Column="0" Grid.RowSpan="3" Background="DimGray" />
 
-        
-        
+
+
         <!--- ######################################################################################################################### -->
         <!-- MENU -->
         <!--- ######################################################################################################################### -->
@@ -39,7 +39,7 @@
                 <ImageBrush ImageSource="pack://siteoforigin:,,,/Resources/menu.png"/>
             </Button.Background>
         </Button>
-        
+
         <!-- Settings controls -->
         <StackPanel Grid.Row="1" Margin="10">
 
@@ -76,19 +76,19 @@
             </Button>
             <TextBlock x:Name="TextBlockInfo" Text="Info text" FontSize="14"/>
         </StackPanel>
-        
-        
-        
+
+
+
         <!--- ######################################################################################################################### -->
         <!-- DATA -->
         <!--- ######################################################################################################################### -->
 
         <!-- Headline -->
         <Label Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2" Content="Raw Converter" HorizontalAlignment="Stretch" FontSize="22" FontWeight="Normal" VerticalAlignment="Center" Margin="10,0,0,0" />
-        
+
         <!-- Data Grid -->
         <DataGrid x:Name="DataGridFiles" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Margin="10" IsReadOnly="True"
-            VerticalScrollBarVisibility="Visible" ColumnWidth="*"/>
+            VerticalScrollBarVisibility="Visible" />
 
         <!-- Loading bar -->
         <StackPanel Grid.Row="2" Grid.Column="1" Orientation="Vertical" Margin="10">
