--- a/RawConverter/MainWindow.xaml
+++ b/RawConverter/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:RawConverter"
         mc:Ignorable="d"
-        Title="MainWindow" Height="800" Width="800">
+        Title="Raw Converter" Height="800" Width="800">
     <Grid HorizontalAlignment="Stretch">
 
         <!--- ######################################################################################################################### -->
@@ -72,7 +72,7 @@
 
         <!-- Info controls -->
         <StackPanel Grid.Row="2" Margin="10" Orientation="Horizontal">
-            <Button x:Name="ButtonMoreInfo" Height="75" Width="75" Margin="0,0,10,0">
+            <Button x:Name="ButtonMoreInfo" Height="75" Width="75" Margin="0,0,10,0" Click="ButtonMoreInfo_Click">
                 <Button.Background>
                     <ImageBrush ImageSource="pack://siteoforigin:,,,/Resources/info.png"/>
                 </Button.Background>
