--- a/RawConverter/MainWindow.xaml
+++ b/RawConverter/MainWindow.xaml
@@ -90,9 +90,15 @@
         <Label Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2" Content="Raw Converter" HorizontalAlignment="Stretch" FontSize="22" FontWeight="Normal" VerticalAlignment="Center" Margin="10,0,0,0" />
 
         <!-- Data Grid -->
-        <DataGrid x:Name="DataGridFiles" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Margin="10" IsReadOnly="True"
-            VerticalScrollBarVisibility="Visible">
-             
+        <DataGrid x:Name="DataGridFiles" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Margin="10" IsReadOnly="True" ColumnWidth="*"
+            VerticalScrollBarVisibility="Visible" ItemsSource="{Binding Path=., Mode=TwoWay, NotifyOnSourceUpdated=True, UpdateSourceTrigger=PropertyChanged}" AutoGenerateColumns="False" >
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Name" Binding="{Binding Path=Name}" />
+                <DataGridTextColumn Header="Extension" Binding="{Binding Path=Extension}" />
+                <DataGridTextColumn Header="File size in MB" Binding="{Binding Path=FileSize}"/>
+                <DataGridTextColumn Header="Created on" Binding="{Binding Path=CreationTime}"/>
+            </DataGrid.Columns>
+
             <!-- Context menu for data grid -->
             <DataGrid.ContextMenu>
                 <ContextMenu>
